<?xml version="1.0" encoding="utf-8"?>
<com.zph.kuaichuan.CustomTabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:clickable="true" >

<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/btn_title_avatar" />

        <RelativeLayout
            android:layout_width="194dp"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/title_center_bg" />

            <TextView
                android:id="@+id/btn_connect_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_connect_friends"
                android:gravity="center"
                android:text="        连接朋友        "
                android:textColor="@color/white"
                android:textSize="@dimen/LargeTextSize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:visibility="visible" >

                <ImageView
                    android:id="@+id/loading_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ap_loading"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:visibility="invisible" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/btn_title_invite" />

        </RelativeLayout>

    </LinearLayout>

<FrameLayout
    android:id="@android:id/tabcontent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/bottom_margin"
    android:layout_weight="0.34" >

</FrameLayout>
<TabWidget android:id="@android:id/tabs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="0.0" >

</TabWidget>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:background="@drawable/main_tab_bg"
        android:gravity="clip_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/main_tab_app"
            android:gravity="center"
            android:text="@string/main_app"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/main_tab_pic"
            android:gravity="center"
            android:text="@string/main_picture"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/main_tab_media"
            android:gravity="center"
            android:text="@string/main_media"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/main_tab_file"
            android:gravity="center"
            android:text="@string/main_file"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.98"
            android:drawableTop="@drawable/main_tab_history"
            android:gravity="center"
            android:text="@string/main_history"
            android:textColor="@color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_tab_anim" />

</FrameLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
</LinearLayout>

</LinearLayout>

</com.zph.kuaichuan.CustomTabHost>
